--- a/mockup/src/components/header.html
+++ b/mockup/src/components/header.html
@@ -1,15 +1,8 @@
 <header id="js-header" class="ag-header">
-  <div id="js-menu_btn" class="ag-menu_btn">
-    <svg class="ag-menu_icon">
-      <use xlink:href="#svg-menu_icon"></use>
-    </svg>
-  </div>
+  <div class="ag-format-container">
 
-  <a href="/" class="ag-logo_link">
-    <img src="images/logo.png" class="ag-logo_img" alt="Logo" />
-  </a>
-
-  <div class="ag-reg_btn-wrap">
-    <a href="/registration" class="ag-base_btn ag-reg_btn">Join Now</a>
+    <a href="/" class="ag-logo_link">
+      <img src="images/logo.png" class="ag-logo_img" alt="Logo"/>
+    </a>
   </div>
 </header>
