--- a/mockup/src/scss/common.scss
+++ b/mockup/src/scss/common.scss
@@ -1,5 +1,13 @@
-$colorbtn: #BB6BD9;
-$colorbtnh: #A847CC;
-$colorbtn2: #231D4F;
+/* body */
+$fontFamily: Poppins;
+$fontSize: 14px;
+$color: #000;
+/* /body */
 
-$colortext: #848199;
+/* breakpoint */
+$maxWidthMobile: 768;
+$maxWidthTable: 980;
+$containerWidthDesktop: 1181;
+/* /breakpoint */
+
+$colorTextPlaceholder: #5A5858;
